# actix-paseto-web

./: .gitignore  README.md
backend/: .env.template  Cargo.toml
backend/src/: main.rs
backend/src/config/: auth.rs  db.rs
backend/src/handlers/auth/: handle_authentication.rs  mod.rs
backend/src/handlers/protected/: home.rs
backend/src/middlewares/: auth_middleware.rs
backend/src/models/: mod.rs  user.rs
backend/src/models/dtos/: dto_signin.rs  dto_signup.rs  mod.rs
backend/src/routes/auth/: auth_routes.rs
backend/src/routes/protected/: home_routes.rs
backend/src/services/auth/: sign_in.rs  sign_up.rs
backend/src/utils/: errors.rs  mod.rs  paseto.rs
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/auth/sign-in/: index.tsx
frontend/src/routes/auth/sign-up/: index.tsx
frontend/src/routes/dashboard/: index.tsx
