[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
actix-web = "4.11.0"
actix-cors = "0.7.1"
surrealdb = "2.3.10"
thiserror = "2.0.17"
serde_json = "1.0.145"
pasetors = "0.7.7"
base64 = "0.22.1"
dotenvy = "0.15.7"
log = "0.4.28"
env_logger = "0.11.8"
